fix media query that keeps my name from wrapping

--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -30,7 +30,7 @@ header {
 	text-transform: lowercase;
 	letter-spacing: 0.1em;
 }
-@media (max-width: 640px) {
+@media (max-width: 720px) {
 	header {
 		font-size: 3em;
 	}
